--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
 * {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  line-height: 1.428;
+}
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+.pd-y {
+  padding: 120px 0;
+}
+.responsive {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
