--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -16,7 +16,7 @@ header {
 .parhead__user > button {
   border: 0;
   outline: 0;
-  border-radius: 5px;git status
+  border-radius: 5px;
   background-color: aliceblue;
   padding: 7px;
   margin: 5px;
@@ -42,7 +42,7 @@ nav {
   border-radius: 15px;
   transition: 0.5s ease-in-out;
 }
-.parnav__ul > li > a:hover{
+.parnav__ul > li > a:hover {
   background-color: aliceblue;
   color: #003588;
 }
